add_subdirectory(broadcast_server_tls)
# add_subdirectory(chat_client)
# add_subdirectory(chat_server)
# add_subdirectory(concurrent_server)
# add_subdirectory(echo_client)
add_subdirectory(echo_server)
# add_subdirectory(echo_server_tls)
# add_subdirectory(fuzzling_flient)
# add_subdirectory(fizzling_server_tls)
# add_subdirectory(stress_client)
# add_subdirectory(wsperf)
add_subdirectory(telemetry_server)
add_subdirectory(remote_logger)